--- a/bonfire.html
+++ b/bonfire.html
@@ -55,7 +55,7 @@
                <li class="blok_li">Loren</li>
              </ul>
              <!--поиск-->
-             <div class="search">
+             <div class="search clearfix">
               	 <form>
                      <input type="text">
                  </form>
