--- a/bonfire.html
+++ b/bonfire.html
@@ -21,7 +21,7 @@
                 <!--курс валют-->
                 <div class="currency">
                     <form>
-                        <select>
+                        <select class="m">
                               <option class="money" value="usd">usd</option>
                               <option class="money" value="eur">eur</option>
                               <option class="money" value="uah">uah</option>
