--- a/bonfire.html
+++ b/bonfire.html
@@ -101,7 +101,7 @@
                     </div>
                     <!--наличие и код товара-->
                     <div class="clearfix indent32">
-                       <dl class="line-height13">
+                       <dl class="line-height13 dline">
                          <dt class="availability">ullamco laboris:</dt>
                          <dd class="blue">dfgfbdf fgfg</dd>
                          <dt class="availability">fugiat nulla pariatur:</dt>
@@ -112,10 +112,10 @@
                     </div>         
                     <!--Описание товара-->
                     <div class="indent32">
-                       <p class="text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non</p>
+                       <p class="text tline">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non</p>
                     </div>
                       <!--характеристики товара-->
-                    <ul class="text indent38">
+                    <ul class="text indent38 dline">
                        <li>Quis autem</li>
                        <li>quaerat voluptatem</li>
                        <li>commodi consequatur</li> 
