--- a/bonfire.html
+++ b/bonfire.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">  
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>      
     <body>
       <div class="wrapper">
@@ -53,12 +54,12 @@
              </div>        
              <!--навигация-->
              <ul class="menu_li">
-               <li class="blok_li">Loren</li>
-               <li class="blok_li">Loren</li>
-               <li class="blok_li">Loren</li>
-               <li class="blok_li">Loren</li>
-               <li class="blok_li">Loren</li>
-               <li class="blok_li">Loren</li>
+               <li class="blok_li">Lorem</li>
+               <li class="blok_li">Lorem</li>
+               <li class="blok_li">Lorem</li>
+               <li class="blok_li">Lorem</li>
+               <li class="blok_li">Lorem</li>
+               <li class="blok_li">Lorem</li>
              </ul>
         </nav>
         <main class="box">
