--- a/bonfire.html
+++ b/bonfire.html
@@ -90,9 +90,17 @@
                     <!--оценка и коментарии товара-->
                     <div class="indent25">
                         <!--оценка-->
-                        <a href="">три звезды</a>
+                        <!--<a href="">три звезды</a>-->
+                         <div class="stars">
+                    <span class="fa fa-star orange-star"></span>
+                    <span class="fa fa-star orange-star"></span>
+                    <span class="fa fa-star orange-star"></span>
+                    <span class="fa fa-star orange-star"></span>
+                    <span class="fa fa-star grey-star"></span>
+                    <span class="sum-rating">3 review(s)</span>
+                    </div>
                         <!--количество коментариев и переход к ним-->
-                        <a class="review" href="">3 review(s)</a>
+                        <!--<a class="review" href="">3 review(s)</a>-->
                         <!--добавить коментарий-->
                         <a class="add_review" href="">add a review</a>
                     </div>
